--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,7 @@ $icon-font-path: '../fonts/';
 $padding-card: 5px;
 $padding-headFoot: 15px;
 $container-purple: #232390;
+$border-color-gray: #e5e5e5;
 
 /* Space out content a bit */
 body {
@@ -25,7 +26,7 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid $border-color-gray;
 
   /* Make the masthead heading the same height as the navigation */
   h3 {
@@ -85,7 +86,7 @@ body {
 .footer {
   padding-top: 19px;
   color: $container-purple;
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid $border-color-gray;
   button.btn{
       background-color: #ffffff;
     }
